# CodeFoundry

./: .HANDOFF.md  .cursorrules  .dockerignore  .gitignore  2026-02-10-agent-teams.txt  CHANGELOG.md  CLAUDE.md  CodeFoundry  Dockerfile  EXPLORATION-REPORT.md  LESSONS.md  Makefile  OPENCLAW-INTEGRATION.md  PROJECT.md  QUICKSTART.md  README.md  SESSION.md  TASKS.md  crontab.backup  docker-compose.yml  pytest.ini  requirements-test.txt  system-prompts.md  test-file-0.txt  test-file-1.txt  test-file-2.txt  test-file-3.txt  test-file-4.txt  test-file-5.txt  test-file-6.txt  test-file-7.txt  test-file-8.txt  test-file-9.txt
.claude/: AGENTS.md  auto-routing-rules.json  code_assistant.md  reviewer.md  settings.codefoundry.template.json  settings.example.json  settings.json  tester.md
.codefoundry/: agents.yaml
.tracking/: error_log.json
docs/: ARCHITECTURE-ANALYSIS.md  INDEX.md  NAVIGATION.md  OPENCLAW-ORCHESTRATOR-ARCHITECTURE.md  QUICKSTART-OPENCLAW.md  README.md  REMOTE-PATHS.md  SHELL-ALIASES.md  TESTING.md  WORKFLOW-GUIDE.md  experts-opinions-documentation-agent.md  experts-opinions-openclaw-orchestrator.md  experts-opinions-telegram-bot.md  github-actions-secrets-setup.md  gitops-README.md  mvp-launch-plan.md  native-claude-code-sys-update.md  openclaw-subagent-architecture.md  remote-server-architecture.md
instructions/: agent-prompt-generation.md  blocks-reference.md  compact-instruction.md  continuation-workflow.md  decision-matrix-advanced.md  decision-matrix.md  first-session-workflow.md  git-operations.md  (+10 more)
templates/archetypes/ai-agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
templates/archetypes/ai-agent/ci/.github/workflows/: ci.yml
templates/archetypes/ai-agent/docker/: Dockerfile  docker-compose.yml
templates/archetypes/ai-agent/gitops/: application.yaml
templates/archetypes/ai-agent/openclaw/workspace/: AGENTS.md
templates/archetypes/telegram-bot/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
templates/archetypes/telegram-bot/ci/.github/workflows/: ci.yml
templates/archetypes/telegram-bot/docker/: Dockerfile
templates/archetypes/telegram-bot/gitops/: application.yaml
(+454 files in other folders)
