[tool.poetry]
name = "my-agent"
version = "1.0.0"
description = "AI Assistant with RAG"
authors = ["Your Name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# LLM Providers
openai = "^1.6.1"
anthropic = "^0.18.1"
httpx = "^0.26.0"

# Vector Database
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
qdrant-client = "^1.7.0"
sqlalchemy = "^2.0.25"

# Cache & Queue
redis = "^5.0.1"
celery = "^5.3.4"

# Orchestration
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"

# Utilities
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
tenacity = "^8.2.3"

# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
